# Elsa_v1

./: .dockerignore  .env.ci  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  main.py  prometheus.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1ff29dd755ab_make_profile_fields_nullable.py  21608b0a30d0_create_users_table.py  c7b68892dc8a_add_user_and_profile_tables.py
app/: main.py
app/api/: routers.py
app/api/routes/: auth_router.py  user_route.py
app/core/: config.py  databases.py  deps.py  jwt.py  redis_client.py  security.py
app/models/: profile.py  user.py
app/repositories/: base.py  profile_repository.py  user_repository.py
app/schemas/: auth.py  user.py
app/services/: auth_service.py  user_service.py
tests/: test_app.py
