[project]
name = "redis-shop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.121.0",
    "pre-commit>=4.3.0",
    "psycopg[binary]>=3.2.12",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "redis>=7.0.1",
    "ruff>=0.14.4",
    "sentry-sdk>=2.43.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
